# GATorch

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
GA/: __init__.py  ga.py
GA/profilers/: energyprofiler.py  measurehook.py  pyjoules.py
GATorch/: ga.py
GATorch/profilers/: __init__.py  measurehookloss.py  pyjoules.py
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/user_manual/: analysing_measurements.rst  getting_started.rst  installation.rst  tensorboard.rst  visualize_measurements.rst
examples/: basic_example.py  fashion_mnist.py  no_gpu_example.py
